# Autonomous-Driving-Project

./: .gitignore  .pre-commit-config.yaml  LICENSE  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/sample_outputs/: report_excerpt.md  sample_plot.txt
notebooks/: README.md
scripts/: quickstart.py
src/av_eval/: __init__.py  cli.py  config.py
src/av_eval/data/: __init__.py  loaders.py  schema.py  synthetic.py
src/av_eval/metrics/: __init__.py  ab.py  events.py  power.py  rates.py  slicing.py  summary.py  top_events.py
src/av_eval/report/: build_report.py
src/av_eval/utils/: logging.py
src/av_eval/viz/: __init__.py  plots.py
src/av_eval_framework.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
tests/: conftest.py  test_ab.py  test_events.py  test_loader_csv.py  test_pipeline.py  test_power.py  test_rates.py  test_top_events.py
