[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "av-eval-framework"
version = "0.1.0"
description = "Autonomous driving evaluation and safety metrics framework"
readme = "README.md"
authors = [{name = "Autonomous Evaluation Team"}]
license = {text = "MIT"}
requires-python = ">=3.11"
dependencies = [
    "pandas>=2.1",
    "numpy>=1.26",
    "scipy>=1.11",
    "statsmodels>=0.14",
    "matplotlib>=3.8",
    "typer[all]>=0.9",
    "pydantic>=2.5",
    "pyarrow>=15.0",
    "tabulate>=0.9"
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4",
    "pytest-cov>=4.1"
]

[project.scripts]
av-eval = "av_eval.cli:main"

[tool.pytest.ini_options]
addopts = "-q"
pythonpath = ["src"]
filterwarnings = [
    "ignore:Support for class-based `config` is deprecated:pydantic.warnings.PydanticDeprecatedSince20",
    "ignore:Downcasting object dtype arrays on .fillna.*:FutureWarning",
    "ignore:DataFrameGroupBy.apply operated on the grouping columns.*:FutureWarning",
]
